@@ -1,0 +1,37 @@
+
+MED 3.00 MMD0
+1 4 4 3 3 4 33 1 0 64
+0
+64 1 0 
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+12 12 12 12 12 12 12 12 12 12 12 12 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -12 -12 -12 -12 -12 -12 -12 -12 -12 -12 -12 -12 -24 -24 -24 -24 -24 -24 -24 -24 -24 -24 -24 -24 -36 -36 -36 -36 -36 -36 -36 -36 -36 -36 -36 -36 -48 -48 -48 -48 -48 -48 -48 -48 -48 -48 -48 -48 -60 -60 -60 -60 -60 -60 -60 -60 -60 -60 -60 -60 0 0 0 0 0 0 0 0 0 0 0 0 0
+64 64 -1 36 0 0 0 0 0 0 0 0 0 0 0 0
+64 1 0 
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+12 12 12 12 12 12 12 12 12 12 12 12 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -12 -12 -12 -12 -12 -12 -12 -12 -12 -12 -12 -12 -24 -24 -24 -24 -24 -24 -24 -24 -24 -24 -24 -24 -36 -36 -36 -36 -36 -36 -36 -36 -36 -36 -36 -36 -48 -48 -48 -48 -48 -48 -48 -48 -48 -48 -48 -48 -60 -60 -60 -60 -60 -60 -60 -60 -60 -60 -60 -60 0 0 0 0 0 0 0 0 0 0 0 0 0
+64 64 -1 36 0 0 0 0 0 0 1 0 0 0 0 0
+64 1 0 
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+12 12 12 12 12 12 12 12 12 12 12 12 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -12 -12 -12 -12 -12 -12 -12 -12 -12 -12 -12 -12 -24 -24 -24 -24 -24 -24 -24 -24 -24 -24 -24 -24 -36 -36 -36 -36 -36 -36 -36 -36 -36 -36 -36 -36 -48 -48 -48 -48 -48 -48 -48 -48 -48 -48 -48 -48 -60 -60 -60 -60 -60 -60 -60 -60 -60 -60 -60 -60 0 0 0 0 0 0 0 0 0 0 0 0 0
+64 64 -1 36 0 0 0 0 0 0 2 0 0 0 0 0
+12 0 1 2 3
+12 e123d4c21ef5173e0b5819239cd6beae
+12 204e2c49ee74d28e02a88acdd4e36c7a
+12 6bc566c3425baa416aa46e943fc745ec
+12 aceb486e7e4b2d2f1c5f2328b503502b
+32 0 32 2 0684f8984bc85966e09269fb46500f8a 
+32 0 32 2 0684f8984bc85966e09269fb46500f8a 
+32 0 32 2 0684f8984bc85966e09269fb46500f8a 
+0 64 0
+255 64 0
+255 64 0
+0 64 0
